# Ademo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aclassenv.ps1  aclassenv.sh  develop1.md  develop2.md  develop3.md  develop4.md
QtIndustrialClient/: A3数据测试说明.md  CLAUDE.md  QtIndustrialClient.qrc  QtIndustrialClient.slnx  main.cpp
QtIndustrialClient/QtIndust.276A30AB/x64/Debug/: QtIndustrialClient.exe.recipe  mainwindow.new.obj.enc
QtIndustrialClient/QtIndust.276A30AB/x64/Debug/QtIndust.276A30AB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QtIndustrialClient.lastbuildstate  QtIndustrialClient.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
QtIndustrialClient/QtIndust.276A30AB/x64/Debug/qt/qmake/df9026a77b2943d087f4e82a8c60e4d5/: qtvars.pro  qtvars.xml
QtIndustrialClient/components/plot/axistag/: axistag.cpp  axistag.h
QtIndustrialClient/components/plot/itemTracer/: ItemTracer.cpp  ItemTracer.h
QtIndustrialClient/components/plot/legend/: legendPlot.cpp  legendPlot.h  legendPlot.ui
QtIndustrialClient/components/plot/qcustomplot/: qcustomplot.cpp  qcustomplot.h
QtIndustrialClient/components/plot/serfPlot/: SerfPlot.cpp  SerfPlot.h
QtIndustrialClient/components/plot/toolTip/: QCPToolTip.cpp  QCPToolTip.h
QtIndustrialClient/components/qvalidator/: RyQValidator.cpp  RyQValidator.h
QtIndustrialClient/models/: ParamConfigure.h  ParameterFilterModel.cpp  ParameterFilterModel.h  ParameterRecord.h  ParameterTableModel.cpp  ParameterTableModel.h
QtIndustrialClient/services/: ConfigService.cpp  ConfigService.h  NetworkService.cpp  NetworkService.h  ProtocolParser.cpp  ProtocolParser.h  SerialService.cpp  SerialService.h
QtIndustrialClient/ui/: AddMainOrderDialog.cpp  AddMainOrderDialog.h  AddProtocolDialog.cpp  AddProtocolDialog.h  CommandOperationPage.cpp  CommandOperationPage.h  ConnectionConfigPage.cpp  ConnectionConfigPage.h  ConnectionConfigPage.ui  ConnectionPage.cpp  ConnectionPage.h  ConnectionPage.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParamConfigPage.cpp  ParamConfigPage.h  ParamConfigPage.ui  ParameterPage.cpp  ParameterPage.h  PlotDialog.cpp  PlotDialog.h  PlotDialog.ui  ProtocolConfigPage.cpp  ProtocolConfigPage.h  ProtocolConfigPage.ui
QtIndustrialClient/ui/delegates/: ActionButtonDelegate.cpp  ActionButtonDelegate.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  RemarkComboDelegate.cpp  RemarkComboDelegate.h
backend/: README.md  app.py  bin_writer.py  db.py  init_db.py  models.py  protocols.db  run_backend.bat  run_backend.pyw
backend/static/: app.js  index.html  style.css
cmake/: AclassPlatform.cmake  AclassProjectOptions.cmake  NSIS.InstallOptions.ini.in  README.md
data/projects/: sample_project.json
data/protocols/: README.md
resources/: app.qrc
scripts/: README.md  cmake-tools.ps1  cmake-tools.sh  generate_sample_bin.py
src/: CMakeLists.txt  main.cpp
src/models/: CMakeLists.txt  binprotocolformat.h  binprotocolloader.cpp  binprotocolloader.h  framecodec.cpp  framecodec.h  jsonpreviewparser.cpp  jsonpreviewparser.h  pointtablemodel.cpp  pointtablemodel.h  projectsummarycontext.h  protocolfieldtablemodel.cpp  protocolfieldtablemodel.h
src/network/: CMakeLists.txt  apiclient.cpp  apiclient.h  serialportmanager.cpp  serialportmanager.h  websocketclient.cpp  websocketclient.h
src/services/: CMakeLists.txt  README.md  connectionmanager.cpp  connectionmanager.h  modbusservice.cpp  modbusservice.h  networkservice.cpp  networkservice.h  protocolparser.cpp  protocolparser.h  serialservice.cpp  serialservice.h
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/ui/pages/: CMakeLists.txt  commandoperationpage.cpp  commandoperationpage.h  connectionpage.cpp  connectionpage.h  devicemanagerpage.cpp  devicemanagerpage.h  deviceupgradepage.cpp  deviceupgradepage.h  homepage.cpp  homepage.h  logpage.cpp  logpage.h  placeholderpagebase.cpp  placeholderpagebase.h  pluginpage.cpp  pluginpage.h  protocoldebugpage.cpp  protocoldebugpage.h  protocoleditorpage.cpp  protocoleditorpage.h  protocolexportpage.cpp  protocolexportpage.h  terminalpage.cpp  terminalpage.h
src/ui/theme/: CMakeLists.txt  thememanager.cpp  thememanager.h
tests/: CMakeLists.txt  README.md
tests/tmp/: CMakeLists.txt  README.md  test_binprotocol_main.cpp
ui/: CMakeLists.txt  CommandOperationPage.ui  ConnectionPage.ui  devicemanagerpage.ui  deviceupgrade.ui  homepage.ui  logpage.ui  mainwindow.ui  pluginpage.ui  protocoldebugpage.ui  protocoleditorpage.ui  protocolexport.ui  terminalpage.ui
